<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_team_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/padding_title_15dp"
            android:text="@string/tv_label_team_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


        <LinearLayout
            android:id="@+id/lv_metric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_team_a"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lv_team_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_label_goal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <TextView
                    android:id="@+id/tv_tm_a_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_label_foul"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/tv_tm_a_foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="0" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/marginTop_text_8dp"
                    android:text="@string/tv_label_card"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/tv_tm_a_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginBottom_text_8dp"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="0" />

                <Button
                    android:id="@+id/btn_tm_a_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart_text_8dp"
                    android:layout_marginEnd="@dimen/marginEnd_text_8dp"
                    android:layout_marginBottom="@dimen/marginBottom_text_8dp"
                    android:text="@string/btn_label_goal" />

                <Button
                    android:id="@+id/btn_tm_a_foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart_text_8dp"
                    android:layout_marginEnd="@dimen/marginEnd_text_8dp"
                    android:layout_marginBottom="@dimen/marginBottom_text_8dp"
                    android:text="@string/btn_label_foul" />

                <Button
                    android:id="@+id/btn_tm_a_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart_text_8dp"
                    android:layout_marginEnd="@dimen/marginEnd_text_8dp"
                    android:layout_marginBottom="@dimen/marginBottom_text_8dp"
                    android:text="@string/btn_label_card" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/width_view_separator"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/marginBottom_text_8dp"
                android:background="@color/colorPrimary" />


            <LinearLayout
                android:id="@+id/lv_team_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_label_goal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <TextView
                    android:id="@+id/tv_tm_b_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop_text_8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_label_foul"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/tv_tm_b_foul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop_text_8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_label_card"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/tv_tm_b_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginBottom_text_8dp"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="0" />


                <Button
                    android:id="@+id/btn_tm_b_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart_text_8dp"
                    android:layout_marginEnd="@dimen/marginEnd_text_8dp"
                    android:layout_marginBottom="@dimen/marginBottom_text_8dp"
                    android:text="@string/btn_label_goal" />

                <Button
                    android:id="@+id/btn_tm_b_foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart_text_8dp"
                    android:layout_marginEnd="@dimen/marginEnd_text_8dp"
                    android:layout_marginBottom="@dimen/marginBottom_text_8dp"
                    android:text="@string/btn_label_foul" />

                <Button
                    android:id="@+id/btn_tm_b_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart_text_8dp"
                    android:layout_marginEnd="@dimen/marginEnd_text_8dp"
                    android:layout_marginBottom="@dimen/marginBottom_text_8dp"
                    android:text="@string/btn_label_card" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lv_metric"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/marginStart_resetBtn_32dp"
            android:layout_marginTop="@dimen/marginTop_resetBtn_16dp"
            android:layout_marginEnd="@dimen/marginEnd_resetBtn_32dp"
            android:layout_marginBottom="@dimen/marginBottom_resetBtn_32dp"
            android:text="@string/btn_label_reset" />


    </RelativeLayout>
</ScrollView>